Support vertical navigation bar to clickable

--- a/module1/index.html
+++ b/module1/index.html
@@ -44,7 +44,7 @@
     <div class="ce-body">
         <div class="c-sidebar">
             <div class="ce-item">
-                Hot Sales
+                <a href="html/product_list.html?top=hot_sale">Hot Sales</a>
             </div>
         </div>
         <div class="ce-content">
