Update code for Payment. To check if in numerical value and text length

--- a/module1/html/payment.html
+++ b/module1/html/payment.html
@@ -14,7 +14,9 @@
             <input type="text" id="cvv" name="cvv" value=""><br><br>
             <label for="expiry">Expiry:</label><br>
             <input type="text" id="expiry" name="expirt" placeholder="MM/YY"><br><br>
+            <label for="error" id="lblError" style="color:red"></label><br>
             <input type="button" id="submit" value="Login">
+            
         </form>
         <script src="js/payment.js"></script> 
     </body>
