Add product_detail page and css change for Xavier

--- a/module1/html/product_list.html
+++ b/module1/html/product_list.html
@@ -21,7 +21,7 @@
 
         <!--horizontal menu bar include: -->
         <div class="ce-menu">
-            <a href="../html/product_list.html?product_type=drink">
+            <a href="product_list.html?product_type=drink">
                 <div class="ce-menu-item">Drinks</div>
             </a>
         </div>
@@ -35,8 +35,8 @@
                 <span class="ce-cart-count">0</span>
                 <!-- <span class="ce-cart-text">Cart</span> -->
             </div>
-            <button class="ce-register-btn" type="button" onClick="location.href='html/register.html'">Register</button>
-            <button class="ce-login-btn" type="button" onClick="location.href='html/login.html'">Login</button>
+            <button class="ce-register-btn" type="button" onClick="location.href='register.html'">Register</button>
+            <button class="ce-login-btn" type="button" onClick="location.href='login.html'">Login</button>
         </div>
     </header>
     <!--menu: Hot deals, new products, top sale-->
@@ -53,7 +53,7 @@
                 <div class="ce-slider">
                     <div class="ce-slider-wrapper">
                         <div class="c-product">
-                            <a href="html/product_detail.html?id=1">
+                            <a href="product_detail.html?id=1">
                                 <div class="ce-thumbnail">
                                     <img alt="coke" src="../images/coca_cola.jpeg">
                                 </div>
@@ -64,7 +64,7 @@
                             </a>
                         </div>
                         <div class="c-product">
-                            <a href="html/product_detail.html?id=1">
+                            <a href="product_detail.html?id=1">
                                 <div class="ce-thumbnail">
                                     <img alt="coke" src="../images/coca_cola.jpeg">
                                 </div>
@@ -75,7 +75,7 @@
                             </a>
                         </div>
                         <div class="c-product">
-                            <a href="html/product_detail.html?id=1">
+                            <a href="product_detail.html?id=1">
                                 <div class="ce-thumbnail">
                                     <img alt="coke" src="../images/coca_cola.jpeg">
                                 </div>
@@ -86,7 +86,7 @@
                             </a>
                         </div>
                         <div class="c-product">
-                            <a href="html/product_detail.html?id=1">
+                            <a href="product_detail.html?id=1">
                                 <div class="ce-thumbnail">
                                     <img alt="coke" src="../images/coca_cola.jpeg">
                                 </div>
@@ -97,64 +97,7 @@
                             </a>
                         </div>
                         <div class="c-product">
-                            <a href="html/product_detail.html?id=1">
-                                <div class="ce-thumbnail">
-                                    <img alt="coke" src="../images/coca_cola.jpeg">
-                                </div>
-                                <div class="ce-info">
-                                    <div class="ce-name">Coke</div>
-                                    <div class="ce-price">99.000 ₫ <span class="ce-price-discount">-23% </span></div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="ce-slider-wrapper">
-                        <div class="c-product">
-                            <a href="html/product_detail.html?id=1">
-                                <div class="ce-thumbnail">
-                                    <img alt="coke" src="../images/coca_cola.jpeg">
-                                </div>
-                                <div class="ce-info">
-                                    <div class="ce-name">Coke</div>
-                                    <div class="ce-price">99.000 ₫ <span class="ce-price-discount">-23% </span></div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="c-product">
-                            <a href="html/product_detail.html?id=1">
-                                <div class="ce-thumbnail">
-                                    <img alt="coke" src="../images/coca_cola.jpeg">
-                                </div>
-                                <div class="ce-info">
-                                    <div class="ce-name">Coke</div>
-                                    <div class="ce-price">99.000 ₫ <span class="ce-price-discount">-23% </span></div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="c-product">
-                            <a href="html/product_detail.html?id=1">
-                                <div class="ce-thumbnail">
-                                    <img alt="coke" src="../images/coca_cola.jpeg">
-                                </div>
-                                <div class="ce-info">
-                                    <div class="ce-name">Coke</div>
-                                    <div class="ce-price">99.000 ₫ <span class="ce-price-discount">-23% </span></div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="c-product">
-                            <a href="html/product_detail.html?id=1">
-                                <div class="ce-thumbnail">
-                                    <img alt="coke" src="../images/coca_cola.jpeg">
-                                </div>
-                                <div class="ce-info">
-                                    <div class="ce-name">Coke</div>
-                                    <div class="ce-price">99.000 ₫ <span class="ce-price-discount">-23% </span></div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="c-product">
-                            <a href="html/product_detail.html?id=1">
+                            <a href="product_detail.html?id=1">
                                 <div class="ce-thumbnail">
                                     <img alt="coke" src="../images/coca_cola.jpeg">
                                 </div>
@@ -167,7 +110,7 @@
                     </div>
                     <div class="ce-slider-wrapper">
                         <div class="c-product">
-                            <a href="html/product_detail.html?id=1">
+                            <a href="product_detail.html?id=1">
                                 <div class="ce-thumbnail">
                                     <img alt="coke" src="../images/coca_cola.jpeg">
                                 </div>
@@ -178,7 +121,7 @@
                             </a>
                         </div>
                         <div class="c-product">
-                            <a href="html/product_detail.html?id=1">
+                            <a href="product_detail.html?id=1">
                                 <div class="ce-thumbnail">
                                     <img alt="coke" src="../images/coca_cola.jpeg">
                                 </div>
@@ -189,7 +132,7 @@
                             </a>
                         </div>
                         <div class="c-product">
-                            <a href="html/product_detail.html?id=1">
+                            <a href="product_detail.html?id=1">
                                 <div class="ce-thumbnail">
                                     <img alt="coke" src="../images/coca_cola.jpeg">
                                 </div>
@@ -200,7 +143,7 @@
                             </a>
                         </div>
                         <div class="c-product">
-                            <a href="html/product_detail.html?id=1">
+                            <a href="product_detail.html?id=1">
                                 <div class="ce-thumbnail">
                                     <img alt="coke" src="../images/coca_cola.jpeg">
                                 </div>
@@ -211,7 +154,64 @@
                             </a>
                         </div>
                         <div class="c-product">
-                            <a href="html/product_detail.html?id=1">
+                            <a href="product_detail.html?id=1">
+                                <div class="ce-thumbnail">
+                                    <img alt="coke" src="../images/coca_cola.jpeg">
+                                </div>
+                                <div class="ce-info">
+                                    <div class="ce-name">Coke</div>
+                                    <div class="ce-price">99.000 ₫ <span class="ce-price-discount">-23% </span></div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="ce-slider-wrapper">
+                        <div class="c-product">
+                            <a href="product_detail.html?id=1">
+                                <div class="ce-thumbnail">
+                                    <img alt="coke" src="../images/coca_cola.jpeg">
+                                </div>
+                                <div class="ce-info">
+                                    <div class="ce-name">Coke</div>
+                                    <div class="ce-price">99.000 ₫ <span class="ce-price-discount">-23% </span></div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="c-product">
+                            <a href="product_detail.html?id=1">
+                                <div class="ce-thumbnail">
+                                    <img alt="coke" src="../images/coca_cola.jpeg">
+                                </div>
+                                <div class="ce-info">
+                                    <div class="ce-name">Coke</div>
+                                    <div class="ce-price">99.000 ₫ <span class="ce-price-discount">-23% </span></div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="c-product">
+                            <a href="product_detail.html?id=1">
+                                <div class="ce-thumbnail">
+                                    <img alt="coke" src="../images/coca_cola.jpeg">
+                                </div>
+                                <div class="ce-info">
+                                    <div class="ce-name">Coke</div>
+                                    <div class="ce-price">99.000 ₫ <span class="ce-price-discount">-23% </span></div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="c-product">
+                            <a href="product_detail.html?id=1">
+                                <div class="ce-thumbnail">
+                                    <img alt="coke" src="../images/coca_cola.jpeg">
+                                </div>
+                                <div class="ce-info">
+                                    <div class="ce-name">Coke</div>
+                                    <div class="ce-price">99.000 ₫ <span class="ce-price-discount">-23% </span></div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="c-product">
+                            <a href="product_detail.html?id=1">
                                 <div class="ce-thumbnail">
                                     <img alt="coke" src="../images/coca_cola.jpeg">
                                 </div>
