--- a/module1/html/product_list.html
+++ b/module1/html/product_list.html
@@ -43,7 +43,7 @@
     <div class="ce-body">
         <div class="c-sidebar">
             <div class="ce-item">
-                <a href="html/product_list.html">Shop</a>
+                <a href="product_list.html?category=shop">Shop</a>
             </div>
         </div>
         <div class="ce-content">
