Add link to shopping cart icon in header bar

--- a/module1/html/product_detail.html
+++ b/module1/html/product_detail.html
@@ -31,9 +31,10 @@
                 <input id="inputSearch" type="text" placeholder="What are you looking for?">
             </div>
             <div class="ce-cart">
-                <img class="ce-cart-icon" src="https://cdn-icons-png.flaticon.com/128/743/743131.png">
-                <span class="ce-cart-count">0</span>
-                <!-- <span class="ce-cart-text">Cart</span> -->
+                <a href="../html/shopping_cart.html">
+                    <img class="ce-cart-icon" src="https://cdn-icons-png.flaticon.com/128/743/743131.png">
+                    <span class="ce-cart-count">0</span>
+                </a>
             </div>
             <button class="ce-register-btn" type="button" onClick="location.href='register.html'">Register</button>
             <button class="ce-login-btn" type="button" onClick="location.href='login.html'">Login</button>
