--- a/module1/index.html
+++ b/module1/index.html
@@ -28,8 +28,10 @@
 
         <div class="ce-controls">
             <div class="ce-cart">
-                <img class="ce-cart-icon" src="https://cdn-icons-png.flaticon.com/128/743/743131.png">
-                <span class="ce-cart-count">0</span>
+                <a href="html/shopping_cart.html">
+                    <img class="ce-cart-icon" src="https://cdn-icons-png.flaticon.com/128/743/743131.png">
+                    <span class="ce-cart-count">0</span>
+                </a>
                 <!-- <span class="ce-cart-text">Cart</span> -->
             </div>
             <button class="ce-register-btn" type="button" onClick="location.href='html/register.html'">Register</button>
