--- a/module1/index-full.html
+++ b/module1/index-full.html
@@ -37,8 +37,10 @@
                 <input id="inputSearch" type="text" placeholder="What are you looking for?">
             </div>
             <div class="ce-cart">
-                <img class="ce-cart-icon" src="https://cdn-icons-png.flaticon.com/128/743/743131.png">
-                <span class="ce-cart-count">0</span>
+                <a href="html/shopping_cart.html">
+                    <img class="ce-cart-icon" src="https://cdn-icons-png.flaticon.com/128/743/743131.png">
+                    <span class="ce-cart-count">0</span>
+                </a>
             </div>
             <button class="ce-register-btn" type="button" onClick="location.href='html/register.html'">Register</button>
             <button class="ce-login-btn" type="button" onClick="location.href='html/login.html'">Login</button>
