Integrate shopping_cart and payment into the website

--- a/module1/html/payment.html
+++ b/module1/html/payment.html
@@ -15,7 +15,7 @@
             <label for="expiry">Expiry:</label><br>
             <input type="text" id="expiry" name="expirt" placeholder="MM/YY"><br><br>
             <label for="error" id="lblError" style="color:red"></label><br>
-            <input type="button" id="submit" value="Login">
+            <input type="submit" id="submit" value="Order">
             
         </form>
         <script src="js/payment.js"></script> 
