feat/styling: apply style for product details, login, register, cart pages

--- a/module1/html/login.html
+++ b/module1/html/login.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="../main.css">
 </head>
 
-<body class="p-register">
+<body class="p-login">
   <header class="c-header">
     <div class="ce-logo">
       <a href="../index.html" data-view-id="header_main_logo" class="ce-logo-link">
@@ -36,29 +36,5 @@
   <script src="js/register.js"></script>
 </body>
 
-
-<Html>
-    <header>
-
-    </header>
-    <body>
-
-
-        <h2>Login</h2>
-
-        <form action="">
-            <label for="username">Username:</label><br>
-            <input type="text" id="username" name="username" value=""><br>
-            <label for="password">Password:</label><br>
-            <input type="password" id="password" name="password" value=""><br><br>
-            <input type="button" id="submit" value="Login">
-        </form>
-
-        <p>If you do not have an account click here to <a href="register.html">register</a></p>
-
-        <!-- Script -->
-        <script src="js/login.js"></script>
-    </body>
-</Html>
 
 
