--- a/module1/html/product_detail.html
+++ b/module1/html/product_detail.html
@@ -67,7 +67,7 @@
             <input type="number" name="quantity" placeholder="quantity" value="1">
           </div>
           <div class="ce-info-item ce-controls">
-            <button class="ce-add-to-cart-btn" type="button">Add to Cart</button>
+            <button class="ce-add-to-cart-btn" type="button" onClick="location.href='./shopping_cart.html'">Add to Cart</button>
           </div>
         </div>
       </div>
