feat/refactor: refactor some html

--- a/module1/html/login.html
+++ b/module1/html/login.html
@@ -14,14 +14,14 @@
     </div>
 
     <div class="ce-controls">
-      <label for="login-btn" class="ce-message">Dont have an account?</label>
-      <button id="login-btn" class="ce-login-btn" type="button" onClick="location.href='./register.html'">Register</button>
+      <label for="register-btn" class="ce-message">Dont have an account?</label>
+      <button id="register-btn" class="ce-register-btn" type="button" onClick="location.href='./register.html'">Register</button>
     </div>
 
   </header>
   <!--menu: Hot deals, new products, top sale-->
   <div class="ce-body">
-    <h2 class="ce-page-title">Welcome To YMCA!</h2>
+    <h1 class="ce-page-title">Welcome To YMCA!</h1>
 
     <form action="" class="c-register-login-form">
       <label for="username">Username:</label><br>
