--- a/module1/html/product_detail.html
+++ b/module1/html/product_detail.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="../main.css" />
 </head>
 
-<body class="p-product-details">
+<body class="p-product-detail">
   <!--header: logo, login/register, search box and button search-->
   <header class="c-header">
     <div class="ce-logo">
@@ -44,7 +44,7 @@
     </div>
     <div class="ce-content">
       <!--Hot sales-->
-      <div class="c-product-details">
+      <div class="c-product-detail">
         <div class="ce-thumbnail">
           <img alt="coke" src="../images/coca_cola.jpeg">
         </div>
