feat/product-list: fix page class typo

--- a/module1/html/product_list.html
+++ b/module1/html/product_list.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="../main.css" />
 </head>
 
-<body class="p-product">
+<body class="p-product-list">
   <!--header: logo, login/register, search box and button search-->
   <header class="c-header">
     <div class="ce-logo">
